--- a/config/database.yml
+++ b/config/database.yml
@@ -79,9 +79,9 @@ test:
 #
 # You can use this database configuration with:
 #
-#   production:
-#     url: <%= ENV['DATABASE_URL'] %>
-#
+production:
+  url: <%= ENV['DATABASE_URL'] %>
+
 production:
   <<: *default
   database: toy_app_production
